- Display errors when the part can't be loaded - e.g. due to an undefined symbol.
This fixes the long-standing "program exits with error code 1 and no warning" problem.

KOfficeUI:
- 

KoText:
- Fixed date format not available for some date variables (#82198)
- Match words to auto-correct in a case-sensitive way to allow entries to have upper case letters. (#80376)

Changes between KOffice-1.3.1 and KOffice-1.3.2
===============================================
KOfficeCore:
- Give the backup file the same permissions as the original file (#54459)
- Save window settings also when using File/Close

KOfficeUI:
- Improved unit widgets

KoText:
- Changing a style in the style manager remembered a wrong "following style",
  so later changes in the style manager wouldn't propagate correctly (#47377)
- Fixed wrong position of suffix in numbered right-to-left paragraphs (#47178)
- Fixed formatting bug, where an inline formula or any other big character after
the paragraph counter, would make the paragraph counter disappear (#82609).
- Fixed wrong alignment when using numbered paragraphs and a tab as first character (#83489)
- Added newParagraph DCOP call (see http://www.koffice.org/developer/dcop/)

Changes between KOffice-1.3 and KOffice-1.3.1
=============================================
Allow to build with automake-1.8

KOfficeCore:
- Changed .desktop file setup so that changes to the K menu structure,
  to file-program associations, or other distribution customizations cannot
  prevent KOffice applications from starting.
- Fixed parsing of number+unit, due to change in Qt 3.3. Fixes problems
  when opening OOWriter documents in particular.
- Don't show the filter dialog when generating thumbnails
- Improved error handling to catch "partition full" problems.

KOfficeUI:
- Fix overwriting of templates (#73537)
- Fix loading icons when creating templates
- Allow template icons up to 64x64 instead of 60x60 and scale better if too big

KoText: